--- a/gatsby-template/package.json
+++ b/gatsby-template/package.json
@@ -17,6 +17,7 @@
     "gatsby-mdx": "^0.6.3",
     "gatsby-plugin-feed": "^2.2.1",
     "gatsby-plugin-manifest": "^2.1.1",
+    "gatsby-plugin-netlify": "^2.0.17",
     "gatsby-plugin-offline": "^2.1.0",
     "gatsby-plugin-react-helmet": "^3.0.12",
     "gatsby-plugin-sharp": "^2.0.36",
