add proper code highlighting

--- a/gatsby-template/package.json
+++ b/gatsby-template/package.json
@@ -26,12 +26,11 @@
     "gatsby-remark-embed-video": "^1.7.1",
     "gatsby-remark-external-links": "^0.0.4",
     "gatsby-remark-images": "^3.0.11",
-    "gatsby-remark-prismjs": "^3.2.9",
     "gatsby-remark-responsive-iframe": "^2.1.1",
     "gatsby-remark-smartypants": "^2.0.9",
     "gatsby-source-filesystem": "^2.0.33",
     "gatsby-transformer-sharp": "^2.1.19",
-    "prismjs": "^1.16.0",
+    "prism-react-renderer": "^0.1.6",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
