fix parsing gist embed with a caption

--- a/gatsby-template/package.json
+++ b/gatsby-template/package.json
@@ -64,7 +64,8 @@
     "lh": "lighthousebot",
     "start": "npm run dev",
     "serve": "gatsby serve",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\""
+    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\"",
+    "import-medium-article": "npx --package=medium-to-own-blog import-medium-article"
   },
   "prettier": {
     "proseWrap": "never",
