--- a/gatsby-template/package.json
+++ b/gatsby-template/package.json
@@ -38,6 +38,7 @@
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
+    "change-case": "^3.1.0",
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^4.3.0",
@@ -49,7 +50,8 @@
     "lint-staged": "^8.1.7",
     "pre-commit": "^1.2.2",
     "prettier": "^1.17.0",
-    "wait-for-netlify-preview": "^1.2.1"
+    "wait-for-netlify-preview": "^1.2.1",
+    "to-style": "^1.3.3"
   },
   "keywords": [
     "gatsby",
