--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "dependencies": {
     "fs-extra": "^8.0.1",
     "inquirer": "^6.3.1",
+    "jimp": "^0.6.4",
     "jsdom": "^15.1.0",
     "jszip": "^3.2.1",
     "ora": "^3.4.0",
