--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "dependencies": {
     "fs-extra": "^8.1.0",
     "inquirer": "^6.5.0",
+    "jimp": "^0.6.4",
     "jsdom": "^15.1.1",
     "jszip": "^3.2.2",
     "ora": "^3.4.0",
