--- a/gatsby-template/package.json
+++ b/gatsby-template/package.json
@@ -38,7 +38,6 @@
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
-    "change-case": "^3.1.0",
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^6.0.0",
@@ -50,8 +49,7 @@
     "lint-staged": "^9.2.1",
     "pre-commit": "^1.2.2",
     "prettier": "^1.17.0",
-    "wait-for-netlify-preview": "^1.2.1",
-    "to-style": "^1.3.3"
+    "wait-for-netlify-preview": "^1.2.1"
   },
   "keywords": [
     "gatsby",
