--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "medium-to-own-blog",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "description": "Switch from Medium to your own blog in a few minutes",
   "bin": {
     "medium-to-own-blog": "bin/medium-to-own-blog.js",
@@ -18,12 +18,16 @@
   "author": "Mathieu Dutour <mathieu@dutour.me>",
   "license": "MIT",
   "devDependencies": {
-    "eslint": "^5.16.0",
-    "eslint-config-airbnb-base": "^13.2.0",
-    "eslint-config-prettier": "^6.0.0",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-prettier": "^3.1.0",
-    "prettier": "^1.18.2"
+    "babel-eslint": "^10.1.0",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb": "^18.1.0",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-react": "^7.19.0",
+    "eslint-plugin-react-hooks": "^2.5.0",
+    "prettier": "^1.19.1"
   },
   "prettier": {
     "proseWrap": "never",
@@ -33,14 +37,14 @@
   },
   "dependencies": {
     "fs-extra": "^8.1.0",
-    "inquirer": "^6.5.0",
-    "jimp": "^0.6.4",
-    "jsdom": "^15.1.1",
+    "inquirer": "^7.1.0",
+    "jimp": "^0.9.5",
+    "jsdom": "^16.2.1",
     "jszip": "^3.2.2",
-    "ora": "^3.4.0",
-    "request": "^2.88.0",
-    "slugify": "^1.3.4",
-    "turndown": "^5.0.3",
+    "ora": "^4.0.3",
+    "request": "^2.88.2",
+    "slugify": "^1.4.0",
+    "turndown": "^6.0.0",
     "xml-js": "^1.6.11"
   }
 }
