--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -11,6 +11,12 @@ rules:
   # PLUGINS #
   ###########
   import/prefer-default-export: 0
+  react/jsx-filename-extension: 0
+  react/jsx-one-expression-per-line: 0
+  react/prop-types: 0
+  react/jsx-props-no-spreading: 0
+  react/jsx-indent: 0
+  react/no-unescaped-entities: 0
 
   ###########
   # BUILTIN #
