--- a/gatsby-theme/package.json
+++ b/gatsby-theme/package.json
@@ -22,6 +22,7 @@
     "gatsby-image": "^2.1.1",
     "gatsby-plugin-emotion": "^4.1.24",
     "gatsby-plugin-feed": "^2.2.1",
+    "gatsby-plugin-goatcounter": "^0.3.1",
     "gatsby-plugin-manifest": "^2.1.1",
     "gatsby-plugin-mdx": "^1.0.19",
     "gatsby-plugin-netlify": "^2.0.17",
